src/objects/ContentVersion.object
<CustomObject>
    <fields>
        <fullName>GPTSummary__c</fullName>
        <inlineHelpText>Summary of file as generated by Flow GPT.</inlineHelpText>
        <label>GPT Summary</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rooms__AIGuidance__c</fullName>
        <defaultValue>&quot;This content is eligible for text extraction.&quot;</defaultValue>
        <label>AI Guidance</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rooms__APILastSync__c</fullName>
        <description>Indicates the last time Content Version was uploaded, analyzed, and synchronized with iDialogue API.</description>
        <label>iDialogue API Last Sync</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rooms__ChecklistItem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>For documents uploaded via checklists. Represents a lookup to checklist item.</inlineHelpText>
        <label>Checklist Item</label>
        <referenceTo>rooms__ChecklistItem__c</referenceTo>
        <relationshipLabel>Content Versions</relationshipLabel>
        <relationshipName>Content_Versions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rooms__Checklist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Checklist</label>
        <referenceTo>rooms__Checklist__c</referenceTo>
        <relationshipLabel>Content Versions</relationshipLabel>
        <relationshipName>Content_Versions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rooms__ContentCategory__c</fullName>
        <label>Content Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rooms__DataSource__c</fullName>
        <description>Indicates the data source for document template.</description>
        <label>Data Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>rooms__DataSource</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>rooms__DefaultFileName__c</fullName>
        <description>File extension is appended to this value dynamically by flows.</description>
        <inlineHelpText>Default file name (without file extension) used in flow automation.</inlineHelpText>
        <label>Default File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rooms__DefaultWatermarkDocument__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Reference to a one-page PDF document for use in watermark overlay.</inlineHelpText>
        <label>Default Watermark Document</label>
        <referenceTo>rooms__Content__c</referenceTo>
        <relationshipLabel>Content Versions</relationshipLabel>
        <relationshipName>Content_Versions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rooms__DisplayName__c</fullName>
        <inlineHelpText>The label displayed in screen flows when templates or content are presented.</inlineHelpText>
        <label>Display Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rooms__DisplayOrder__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>The order in which templates or content are displayed in screen flows.</inlineHelpText>
        <label>Display Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rooms__DominantLanguage__c</fullName>
        <inlineHelpText>2 character language code (Example: &quot;en&quot;).</inlineHelpText>
        <label>Dominant Language</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rooms__EnableContentAnalysis__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Default is false. Create BEFORE triggers to dynamically set this field.</description>
        <inlineHelpText>Indicates the content should be analyzed by the iDialogue content post processor.</inlineHelpText>
        <label>Enable Content Analysis</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rooms__ErrorCount__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Indicates the number of tag validation errors, if document is a Word DOCX template.</inlineHelpText>
        <label>Error Count</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rooms__Errors__c</fullName>
        <inlineHelpText>Template related errors.</inlineHelpText>
        <label>Errors</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rooms__ExternalDataSourceID__c</fullName>
        <description>Reference to a Data Source custom metadata type record. Required if DateSource=&quot;External&quot;</description>
        <label>External Data Source ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rooms__FormInputCount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Form Input Count</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rooms__FrontMatter__c</fullName>
        <description>Supports iDialogue templates. Describes the tags, form elements, and conditional expressions in a Word document template.</description>
        <inlineHelpText>Supports iDialogue templates. Describes the tags, form elements, and conditional expressions in a Word document template.</inlineHelpText>
        <label>Front Matter</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rooms__HashCode__c</fullName>
        <defaultValue>0</defaultValue>
        <description>String hashCode of DAO.Site JSON data model.</description>
        <label>Hash Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rooms__InWorkspace__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set by ContentVersion trigger.</description>
        <inlineHelpText>Indicates the content is included in a library workspace.</inlineHelpText>
        <label>In Workspace</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rooms__IsArchived__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates the content is no longer displayed in any customer experiences (CX), such as rooms and checklists.</inlineHelpText>
        <label>Is Archived</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rooms__IsFillable__c</fullName>
        <formula>rooms__FormInputCount__c &gt; 0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Fillable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rooms__IsLibraryContent__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates if the content is related to a ContentWorkspace.</inlineHelpText>
        <label>Is Library Content</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rooms__IsPublished__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Updated on tag builder. Used in conjunction with standard IsLatest flag.</description>
        <inlineHelpText>Indicates the content version is published and available for use in iDialogue sales enablement and rooms.</inlineHelpText>
        <label>Is Published</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rooms__IsStatic__c</fullName>
        <description>Indicates the document is not a merge template, and can only be delivered as static content in document rooms.</description>
        <formula>NOT(  rooms__IsTemplate__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Static</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rooms__IsTemplate__c</fullName>
        <description>Indicates whether the document contains any merge or fillable form tags.</description>
        <formula>OR( 
   rooms__TagCount__c &gt; 0,
   rooms__FormInputCount__c &gt; 0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Template</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rooms__LastGeneratedDate__c</fullName>
        <description>The date timestamp document template was last used to generate an iDialogue document.</description>
        <label>Last Generated Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rooms__LastSyncDate__c</fullName>
        <description>The date timestamp document was last uploaded to iDialogue web service.</description>
        <label>Last Sync Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rooms__LastTextAnalysis__c</fullName>
        <label>Last Text Analysis</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rooms__LostUsageCount__c</fullName>
        <label>Lost Usage Count</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rooms__MasterRecordType__c</fullName>
        <label>Master Record Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rooms__MergeQuery__c</fullName>
        <description>Note: Use of this field may result in errors during document merge if any fields referenced in the tag builder are not included in the query.</description>
        <inlineHelpText>Improves document merge performance by querying specific fields on the mast record. By default, the tag builder uses the {allfields} macro to query fields, which can create performance issues. Example format: 
SELECT Id, Name, Description, StageName, MyField__c FROM Opportunity WHERE Id={recordId}</inlineHelpText>
        <label>Optimized Merge Query</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rooms__PIIDetected__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates if PII was detected in file or document.</inlineHelpText>
        <label>PII Detected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rooms__PIISummary__c</fullName>
        <description>Requires FlowGPT AI processing.</description>
        <inlineHelpText>If the file or document contains Personally Identifiable Information (PII), and iDialogue GPT has processed the file, then details will appear here.</inlineHelpText>
        <label>PII Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rooms__ParagraphCount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Paragraph Count</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rooms__PreviewTemplateLink__c</fullName>
        <formula>HYPERLINK( &quot;/apex/rooms__PreviewTemplate?id=&quot; + Id, &quot;Open template tag builder&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Provides tag mapping for DOCX templates. Requires that the DOCX contain at least one iDialogue tag to enable link.</inlineHelpText>
        <label>Template Tag Builder</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rooms__PrimarySignerContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>For instances of signed files, the Contact to sign {{Signer1.Signature1}} tag in document.</inlineHelpText>
        <label>Primary Signer Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Content Versions</relationshipLabel>
        <relationshipName>Content_Versions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rooms__RecentTestRecords__c</fullName>
        <description>iDialogue internal storage of recently used test records for previewing templates.</description>
        <label>Recent Test Records</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rooms__RequiresSignatures__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the template contains Signature tags.</description>
        <label>Requires Signatures</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rooms__RoomKey__c</fullName>
        <label>Room Key</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>rooms__SEExternalEnabledCount__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>The number of times this content was suggested from the Sales Enablement external content tab.</inlineHelpText>
        <label>SE External Enabled Count</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rooms__SEExternalRoomAddCount__c</fullName>
        <label>SE External Room Add Count</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rooms__SEExternalViewCount__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>The number of times this content was viewed from the Sales Enablement external content tab.</inlineHelpText>
        <label>SE External View Count</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rooms__SEInternalEnabledCount__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>The number of times this content was suggested from the Sales Enablement internal content tab.</inlineHelpText>
        <label>SE Internal Enabled Count</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rooms__SEInternalRoomAddCount__c</fullName>
        <label>SE Internal Room Add Count</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rooms__SEInternalViewCount__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>The number of times this content was viewed from the Sales Enablement internal content tab.</inlineHelpText>
        <label>SE Internal View Count</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rooms__SESearchResultsCount__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>The number of times this content appeared in search results from the Sales Enablement search tab.</inlineHelpText>
        <label>SE Search Results Count</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rooms__SESearchRoomAddCount__c</fullName>
        <label>SE Search Room Add Count</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rooms__SESearchViewCount__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>The number of times this content was viewed from the Sales Enablement search results tab.</inlineHelpText>
        <label>SE Search View Count</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rooms__Searchable__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates the content is searchable from iDialogue lightning components and screen flows.</inlineHelpText>
        <label>Searchable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rooms__SecondaryLanguage__c</fullName>
        <inlineHelpText>iDialogue content intelligence metadata.</inlineHelpText>
        <label>Secondary Language</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rooms__SignatureRequestLastSent__c</fullName>
        <label>Signature Request Last Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rooms__SiteDefinition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Site Definition Data</label>
        <referenceTo>rooms__SiteDefinitionData__c</referenceTo>
        <relationshipLabel>Content Versions</relationshipLabel>
        <relationshipName>Content_Versions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rooms__TableCount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Table Count</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rooms__TagCount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Tag Count</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rooms__TemplateHasErrors__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the front matter associated with a document template has any parsing errors. If true, template cannot be used by merge API.</description>
        <label>Template Has Errors</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rooms__TextExtractJobId__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Reference to the iDialogue AI Job that extracted text from content.</inlineHelpText>
        <label>Text Extract JobId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rooms__TextExtractTimestamp__c</fullName>
        <inlineHelpText>Date time when text was extracted from content.</inlineHelpText>
        <label>Text Extract Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rooms__TotalSignatures__c</fullName>
        <description>Indicates the total number of signature tags in the document across all signers.</description>
        <label>Total Signatures</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rooms__TotalSigners__c</fullName>
        <description>Indicates the number of document signers based on Signer1, Signer2, etc... tags.</description>
        <label>Total Signers</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rooms__WonUsageCount__c</fullName>
        <description>Updated regularly by iDialogue intelligence service.</description>
        <inlineHelpText>Number of won opportunities that utilized this content.</inlineHelpText>
        <label>Won Usage Count</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rooms__WordCount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Word Count</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>